src/z80asm/z80asm2/t/40-syntax/expected/defw_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/defw_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/defw_01.asm...
t/40-syntax/input/defw_01.asm:1:5: error: Expression expected
    defw
        ^
t/40-syntax/input/defw_01.asm:2:1: error: Unterminated expression after "defw"
    defw ,
    ^
t/40-syntax/input/defw_01.asm:4:18: error: Expression expected
    defw 1,2,3,1+2*3,
                     ^
t/40-syntax/input/defw_01.asm:5:18: error: Unexpected token: "@"
    defw 1,2,3,1+2*3 @
                     ^
Program: defw_01
    Modules:
        Module: defw_01 (current)
            Sections:
                Section: "" (current)
                    Size: 0
    Statements:
        OpcodeStmt
            Location: t/40-syntax/input/defw_01.asm:3:1
            Address: 0
            Bytes: 0 0 0 0 0 0 0 0
            Patches:
                Patch
                    Location: t/40-syntax/input/defw_01.asm:3:6
                    Value type: Unknown
                    Tokens: 1
                    Offset: 0, Size: 2
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/defw_01.asm:3:6
                            Value type: Unknown
                            Tokens: 1
                Patch
                    Location: t/40-syntax/input/defw_01.asm:3:8
                    Value type: Unknown
                    Tokens: 2
                    Offset: 2, Size: 2
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 2
                            Location: t/40-syntax/input/defw_01.asm:3:8
                            Value type: Unknown
                            Tokens: 2
                Patch
                    Location: t/40-syntax/input/defw_01.asm:3:10
                    Value type: Unknown
                    Tokens: 3
                    Offset: 4, Size: 2
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 3
                            Location: t/40-syntax/input/defw_01.asm:3:10
                            Value type: Unknown
                            Tokens: 3
                Patch
                    Location: t/40-syntax/input/defw_01.asm:3:14
                    Value type: Unknown
                    Tokens: 1+2*3
                    Offset: 6, Size: 2
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprBinary: +
                            Location: t/40-syntax/input/defw_01.asm:3:14
                            Value type: Unknown
                            Tokens: 1+2*3
                            LHS:
                                ExprLiteralInt: 1
                                    Location: t/40-syntax/input/defw_01.asm:3:12
                                    Value type: Unknown
                                    Tokens: 
                            RHS:
                                ExprBinary: *
                                    Location: t/40-syntax/input/defw_01.asm:3:16
                                    Value type: Unknown
                                    Tokens: 
                                    LHS:
                                        ExprLiteralInt: 2
                                            Location: t/40-syntax/input/defw_01.asm:3:14
                                            Value type: Unknown
                                            Tokens: 
                                    RHS:
                                        ExprLiteralInt: 3
                                            Location: t/40-syntax/input/defw_01.asm:3:16
                                            Value type: Unknown
                                            Tokens: 
